--- a/src/settings/style.css
+++ b/src/settings/style.css
@@ -1,3 +1,13 @@
-h1 {
-	font-size: initial;
+
+
+#ufo-ai-settings a.components-external-link {
+    font-size: x-large;
+}
+
+.ufo-ai-wp-wrap h1 {
+    font-size: 23px;
+    font-weight: 400;
+    margin: 0;
+    padding: 9px 0 4px;
+    line-height: 1.3;
 }
